관리자_스케줄업데이트

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -4115,12 +4115,50 @@
         // ========== 스케줄 관리 기능 ==========
         let scheduleRows = [];
         const defaultScheduleSteps = [
-            { name: "디자인 상담", inCharge: "DESIGN JIG" },
-            { name: "민원 접수", inCharge: "DESIGN JIG" },
-            { name: "보존 상태", inCharge: "원프로" },
-            { name: "가구 철거", inCharge: "브라더" },
-            { name: "마루 철거", inCharge: "지오데크" },
-            { name: "일반 철거", inCharge: "최영규" }
+            { name: "보존 상태", inCharge: "" },
+            { name: "마루 철거", inCharge: "" },
+            { name: "철거", inCharge: "" },
+            { name: "창호", inCharge: "" },
+            { name: "2차 보수", inCharge: "" },
+            { name: "시스템 에어컨", inCharge: "" },
+            { name: "전기 배선", inCharge: "" },
+            { name: "타일", inCharge: "" },
+            { name: "욕창실 산창", inCharge: "" },
+            { name: "콘크리트", inCharge: "" },
+            { name: "도어락 설치", inCharge: "" },
+            { name: "청소", inCharge: "" },
+            { name: "준공청소", inCharge: "" },
+            { name: "디자인 상담", inCharge: "" },
+            { name: "민원 접수", inCharge: "" },
+            { name: "가구 상담", inCharge: "" },
+            { name: "가구 철거", inCharge: "" },
+            { name: "마루 철거", inCharge: "" },
+            { name: "일반 철거", inCharge: "" },
+            { name: "설비", inCharge: "" },
+            { name: "1차 방수", inCharge: "" },
+            { name: "창호", inCharge: "" },
+            { name: "2차 목수", inCharge: "" },
+            { name: "시스템 에어컨", inCharge: "" },
+            { name: "타일 시공", inCharge: "" },
+            { name: "욕실/도어", inCharge: "" },
+            { name: "3차 보수", inCharge: "" },
+            { name: "욕실/도어", inCharge: "" },
+            { name: "현장점검", inCharge: "" },
+            { name: "타일", inCharge: "" },
+            { name: "욕실점검", inCharge: "" },
+            { name: "반점검", inCharge: "" },
+            { name: "하드코팅", inCharge: "" },
+            { name: "도배", inCharge: "" },
+            { name: "현장정리/청소", inCharge: "" },
+            { name: "인테리어", inCharge: "" },
+            { name: "가구(주방)", inCharge: "" },
+            { name: "가구(붙박이장)(싱크탑)", inCharge: "" },
+            { name: "전기/가구", inCharge: "" },
+            { name: "도기/수전", inCharge: "" },
+            { name: "시스템 에어컨", inCharge: "" },
+            { name: "청소", inCharge: "" },
+            { name: "최종 점검", inCharge: "" },
+            { name: "인수인계", inCharge: "" }
         ];
 
         function loadScheduleForCustomer() {
