--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -7,6 +7,27 @@
     <title>디자인지그 통합 관리 시스템</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://upload-widget.cloudinary.com/6.8.1/global/all.js" type="text/javascript"></script>
+
+    <!-- 페이지 접근 보호 스크립트 (최우선 실행) -->
+    <script>
+        (function () {
+            const ADMIN_PAGE_PASSWORD = 'W6454';
+            const isAuthenticated = sessionStorage.getItem('dz_admin_page_auth');
+
+            // 인증되지 않았으면 비밀번호 확인
+            if (!isAuthenticated) {
+                const password = prompt('관리자 페이지 접근 비밀번호를 입력하세요:');
+
+                if (password === ADMIN_PAGE_PASSWORD) {
+                    sessionStorage.setItem('dz_admin_page_auth', 'true');
+                } else {
+                    alert('비밀번호가 올바르지 않습니다. 메인 페이지로 이동합니다.');
+                    window.location.href = '/';
+                }
+            }
+        })();
+    </script>
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
