--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3261,8 +3261,8 @@
                                     <tr style="background:#f5f5f7;">
                                         <th style="width:40px; padding:12px; border:1px solid #d2d2d7;">No</th>
                                         <th style="padding:12px; border:1px solid #d2d2d7;">공정명</th>
-                                        <th style="width:110px; padding:12px; border:1px solid #d2d2d7;">시작일</th>
-                                        <th style="width:110px; padding:12px; border:1px solid #d2d2d7;">종료일</th>
+                                        <th style="width:140px; padding:12px; border:1px solid #d2d2d7;">시작일</th>
+                                        <th style="width:140px; padding:12px; border:1px solid #d2d2d7;">종료일</th>
                                         <th style="width:100px; padding:12px; border:1px solid #d2d2d7;">담당자</th>
                                         <th style="padding:12px; border:1px solid #d2d2d7;">비고</th>
                                         <th style="width:100px; padding:12px; border:1px solid #d2d2d7;">관리</th>
@@ -4277,7 +4277,7 @@
                         <input type="text" value="${row.name}" class="customer-field" style="width:100%; border:none; background:transparent; font-size:12px; padding:5px;" onchange="updateScheduleRow(${index}, 'name', this.value)">
                     </td>
                     <td style="padding:5px; border:1px solid #d2d2d7;">
-                        <input type="date" value="${row.start || ''}" class="customer-field" style="width:100%; border:none; background:transparent; font-size:12px; padding:5px;" onchange="updateScheduleRow(${index}, 'start', this.value)">
+                        <input type="date" value="${row.start || ''}" class="customer-field" style="width:100%; border:none; background:transparent; font-size:12px; padding:5px;" onchange="handleStartDateChange(${index}, this.value)">
                     </td>
                     <td style="padding:5px; border:1px solid #d2d2d7;">
                         <input type="date" value="${row.end || ''}" class="customer-field" style="width:100%; border:none; background:transparent; font-size:12px; padding:5px;" onchange="updateScheduleRow(${index}, 'end', this.value)">
@@ -4319,6 +4319,19 @@
 
         function updateScheduleRow(index, field, value) {
             scheduleRows[index][field] = value;
+            saveScheduleToCustomer();
+        }
+
+        // 시작일 변경 시 종료일 자동 채우기
+        function handleStartDateChange(index, value) {
+            scheduleRows[index]['start'] = value;
+
+            // 종료일이 비어있으면 시작일과 동일하게 설정
+            if (!scheduleRows[index]['end'] && value) {
+                scheduleRows[index]['end'] = value;
+                renderScheduleTable(); // 테이블 다시 렌더링하여 종료일 표시
+            }
+
             saveScheduleToCustomer();
         }
 
